 * The scale for importing height maps and masks, as well as the scale for overlay images, can now be specified with up to two decimals precision, for more accurate size control
 * Plants on the Custom Plants Layer settings screen are now disabled if they are not supported by the current map format
 * Bug fix: fixed a bug that made it impossible to select block ID 31 for numerical ID-based map formats such as Minecraft 1.12
 * Bug fix: make pumpkin and melon stems from Custom Plants Layers export with the correct ages
 * Various bug fixes and usability improvements

-- Version 2.15.18, released 4-1-2023

 * Many screens that contain previews are now maximisable
 * Bug fix: make adding Custom Cave/Tunnel layer floor or roof layers work again (and possibly other nested popups)
 * Various bug fixes

-- Version 2.15.17, released 3-1-2023

 * Data packs can now be specified on the Export screen, which WorldPainter will copy into the datapacks directory of the generated map for you
   + WorldPainter does no validation of these files. In particular, it does not check whether they support the appropriate Minecraft version. Use at your own risk
   + The data packs must be .zip files. Extracted data pack directories are not supported
   + The list of data pack files is stored in the .world file, but the contents of the data packs are not. The data packs must be accessible from the original locations whenever the world is Exported, otherwise a warning will be given and the data pack skipped
   + As part of this work, the Export screen has been redesigned. The general and Minecraft-specific settings are now on their own tab named General
 * The default terrain colour ramp should have topped with purple, but it was actually pink. This has been fixed
 * A setting has been added to the Preferences screen to manually specify the maximum thread count for Export and Merge operations. It is on the Performance tab